k8s-manifests/dashboard.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-service
  labels:
    app: dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
      - name: dashboard
        image: iaminci/micro-frontend-demo:dashboard-v0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-service
  labels:
    app: dashboard
spec:
  selector:
    app: dashboard
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
