k8s-manifests/invoices.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invoices-service
  labels:
    app: invoices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: invoices
  template:
    metadata:
      labels:
        app: invoices
    spec:
      containers:
      - name: invoices
        image: iaminci/micro-frontend-demo:invoices-v0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: invoices-service
  labels:
    app: invoices
spec:
  selector:
    app: invoices
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
