k8s-manifests/server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-service
  labels:
    app: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        image: iaminci/micro-frontend-demo:server-v0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: server-service
  labels:
    app: server
spec:
  selector:
    app: server
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
