k8s-manifests/shell.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shell-service
  labels:
    app: shell
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shell
  template:
    metadata:
      labels:
        app: shell
    spec:
      containers:
      - name: shell
        image: iaminci/micro-frontend-demo:shell-v0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: shell-service
  labels:
    app: shell
spec:
  selector:
    app: shell
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
