k8s-manifests/ui.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-service
  labels:
    app: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
      - name: ui
        image: iaminci/micro-frontend-demo:ui-v0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  labels:
    app: ui
spec:
  selector:
    app: ui
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
